# CUDA_proj

./: .gitignore  CMakeLists.txt  README.md
include/: cuda_prog_11.h  cuda_prog_m1.h  cuda_prog_m1_share.h  sequential.h  utils.h
scripts/: cluster_script.sh  cuda_v1.sh  cuda_v1_k.sh  cuda_v2.sh  cuda_v2_b_search.sh  cuda_v2_k.sh  cuda_v3.sh  cuda_v3_b_search.sh  cuda_v3_k.sh  plots.py  sequential_test.sh
src/: cprogram.cu  cuda_prog_11.cu  cuda_prog_m1.cu  cuda_prog_m1_share.cu  sequential.cu  utils.cu
tests/: CMakeLists.txt
tests/src/: utils_test.cpp
